EXTRA_DIST = \
	config_h.vms \
	descrip.mms \
	README.vms \
	clean_delete.com \
	configure.com \
	full-test.com \
	recheck_tests_in.com \
	run_tests_in.com \
	vmsarg_command_bcp.cld \
	vmsarg_command_defncopy.cld \
	vmsarg_command_isql.cld \
	libodbc.opt \
	libodbcinst.opt \
	odbc_driver_axp.opt \
	odbc_driver_axp_wide.opt \
	stdint.h \
	vargdefs.h \
	edit.c \
	getpass.c \
	vmsarg_mapping_bcp.c \
	vmsarg_mapping_defncopy.c \
	vmsarg_mapping_isql.c \
	vmsarg_parse.c

clean:
